# DocHub

./: .gitignore  Cargo.toml  DocHub.bat  README.md  electron-builder.yml  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: error.rs  main.rs
backend/src/pdf_ops/: merge.rs  metadata.rs  mod.rs  split.rs
backend/src/utils/: mod.rs
core-backend/: Cargo.toml  build.rs
core-backend/config/: default.toml
core-backend/src/: lib.rs  main.rs
core-backend/src/api/: file_handlers.rs  handlers.rs  middleware.rs  mod.rs  pdf_handlers.rs  router.rs  validation.rs
core-backend/src/processors/: mod.rs  pdf_merger.rs  pdf_splitter.rs  pdf_validator.rs
core-backend/src/types/: api_types.rs  mod.rs  pdf_types.rs
core-backend/src/utils/: config.rs  error_handling.rs  logging.rs  mod.rs
frontend/: index.html  package.json
frontend/scripts/: app.js
frontend/scripts/modules/: pdf_card.js  theme_manager.js  ui_render.js  view_merge.js  view_split.js
frontend/src/: main.js
frontend/src/api/: file-api.js  ipc-client.js  mock-api.js  pdf-api.js
frontend/src/core/: app.js  dependency-injector.js  error-boundary.js  event-bus.js  router.js  state-manager.js
frontend/src/services/: analytics-service.js  shortcut-service.js  theme-manager.js  theme-service.js  ui-render.js
frontend/src/stores/: app-store.js  pdf-store.js  settings-store.js  ui-store.js
frontend/src/styles/: main.css
frontend/src/utils/: constants.js  file-utils.js  (+4 more)
frontend/styles/: components.css  layouts.css  main.css
scripts/: build.js  dev.js  package.js
shared/constants/: config.constants.ts  errors.constants.ts
shared/types/: app.types.ts  pdf.types.ts
tests/: setup.js
(+26 files in other folders)
