[package]
name = "dochub-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lopdf = "0.29"
tokio = { version = "1.0", features = ["full"] }

# Novas dependências para a arquitetura refatorada
thiserror = "1.0"           # Para erros tipados
anyhow = "1.0"             # Para erros de aplicação
tracing = "0.1"            # Para logging estruturado
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Additional dependencies
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
toml = "0.8"
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
num_cpus = "1.0"
once_cell = "1.0"
nanoid = "0.4"
async-trait = "0.1"

# Dependências opcionais para desenvolvimento
[dev-dependencies]
tempfile = "3.3"           # Para testes com arquivos temporários
assert_matches = "1.5"     # Para assertions em testes

[build-dependencies]
chrono = "0.4"
rustc_version = "0.4"